--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,5 +1,10 @@
+* {
+  margin:0;
+  padding:0;
+}
+
 #map-image {
-  max-width: 100%;
+  max-width: 90%;
 }
 
 .text-center {
@@ -10,16 +15,8 @@
   text-align: right;
 }
 
-.ml-auto {
-  margin-right: auto;
-}
-
-#chat-bot-card {
-}
-
 .chat-message {
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 5px;
 }
 
 .circle {
