--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,20 @@
 #map-image {
-  max-width: 90%;
+  max-width: 100%;
+}
+
+#map-area{
+  padding: 0;
+  margin: 0;
+}
+
+#map-area{
+  position: relative;
+}
+
+.player{
+  position: absolute;
+  background: yellow;
+  z-index: 999;
+  width: 10px;
+  height: 10px;
 }
